--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body{
 }
 #site{
     display: grid;
-    grid-template-columns: 350px minmax(1000px, 3fr);
-    grid-template-rows: minmax(250px, 1fr) 8fr;
+    grid-template-columns: 250px minmax(1000px, 3fr);
+    grid-template-rows: minmax(100px, 1fr) 8fr;
     height: 100vh;
 
 
@@ -56,7 +56,7 @@ body{
 
 
 #content{
-    background-color: white;
+    background-color: red;
     grid-area: span 1 / span 1;
 }
 
