--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body{
 
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr 1fr;
+    padding: 30px;
 
 
 
@@ -47,6 +48,18 @@ body{
 
 #header > #greeting{
     grid-area: span 1 / span 3;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+
+    font-size: 1.3em;
+    
+}
+
+#header > #greeting > p{
+    margin-left: 30px;
 }
 
 #header > #buttons { 
@@ -80,4 +93,55 @@ body{
 
     margin-bottom: 15px;
 
+}
+
+.searchbarstyle{
+
+    display: flex;
+    align-items: center;
+    border: solid;
+    grid-area: span 1 / span 3;
+}
+
+.profile{
+    display: flex;
+    justify-content: end;
+    grid-area: span 1 / span 2;
+    align-items: center;
+    font-weight: bold;
+
+
+}
+
+.headerbuttons{
+    display: flex;
+    justify-content: space-around;
+    justify-items: center;
+    height: 100%;
+    align-items: center;
+    grid-area: span 1 / span 2;
+    border: solid;
+}
+
+.headerbuttons > button{
+    height: 75%;
+    width: 20%;
+    border-radius: 15%;
+}
+
+
+
+
+.searchbarstyle > input{
+    border-radius: 15px;
+    background-color: gainsboro;
+    flex: 0.75;
+}
+
+.profileimage{
+    border-radius: 50%;
+    height: 90%;
+    max-height: 60px;
+    max-width: 100%;
+    object-fit: contain;
 }
