--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 
 
 #sidebar{
-    background-color: blue;
+    background-color: #15752a;
     font-size: 20px;
     grid-area: span 2 / span 1;
     color: white;
@@ -24,7 +24,8 @@ body{
 }
 
 #header{
-    background-color: aqua;
+    background-color: #4a9e42;
+    box-shadow: 0 0 30px #333;
     grid-area: span 1/ span 1;
     display: grid;
 
@@ -69,7 +70,9 @@ body{
 
 
 #content{
-    background-color: red;
+    background-color: #ad7242;
+    box-shadow: 0 0 30px #333;
+
     grid-area: span 1 / span 1;
 }
 
@@ -125,7 +128,7 @@ body{
 
 .headerbuttons > button{
     height: 75%;
-    width: 20%;
+    width: 30%;
     border-radius: 15%;
 }
 
