--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html,
 body{
     margin: 0;
+    height: 100vh;
+
 }
 #site{
     display: grid;
@@ -214,7 +216,7 @@ body{
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 7fr 1fr 7fr;
 
     margin-left: 1em;
     margin-right: 1em;
@@ -233,10 +235,17 @@ body{
 }
 
 #content > #rightside > #announcements{
-
+    grid-area: span 1 / span 1;
 
 }
 
+#content > #rightside > #trendheader{
+    grid-area: span 1 / span 1;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 10px;
+}
 #content > #rightside > #trending{
     background-color: red;
 
