--- a/style.css
+++ b/style.css
@@ -263,9 +263,10 @@ body{
 
     height: 100%;
     width: 100%;
-    background-color: #15752a;
+    background-color: white;
     border-radius: 15px;
     box-shadow: 0 8px 2px -2px #333;
+
 
 
 }
@@ -273,6 +274,19 @@ body{
 #content > #rightside > #announcements{
     grid-area: span 1 / span 1;
 
+
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+
+
+}
+
+#content > #rightside > #announcements > .news{
+    margin: 15px;
+    grid-area: span 1/ span 1;
+
+    display: flex;
+    align-items: center;
 }
 
 #content > #rightside > #trendheader{
@@ -284,6 +298,13 @@ body{
 }
 #content > #rightside > #trending{
     grid-area: span 1/ span 1;
-    background-color: red;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#content > #rightside > #trending > .person{
+    margin: 15px;
 
 }
