--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body{
     display: grid;
     grid-template-rows: 1fr 9fr;
 
+    box-shadow: 8px 0 5px -5px #333;
+
+    z-index: 1002;
+
     
 
 
@@ -52,7 +56,7 @@ body{
 
 #header{
     background-color: #4a9e42;
-    box-shadow: 0 0 30px #333;
+    box-shadow: 0 8px 6px -6px #333;
     grid-area: span 1/ span 1;
     min-width: 940px;
     display: grid;
@@ -60,6 +64,8 @@ body{
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr 1fr;
     padding: 30px;
+
+    z-index: 1001;
 
 
 
